--- a/src/emailservice/Dockerfile
+++ b/src/emailservice/Dockerfile
@@ -48,5 +48,9 @@ COPY --from=builder /usr/local/lib/python3.7/ /usr/local/lib/python3.7/
 # Add the application
 COPY . .
 
+RUN chown -R nobody /email_server
+# user: nobody
+USER 65534
+
 EXPOSE 8080
 ENTRYPOINT [ "python", "email_server.py" ]
