--- a/src/productcatalogservice/Dockerfile
+++ b/src/productcatalogservice/Dockerfile
@@ -35,6 +35,10 @@ WORKDIR /src
 COPY --from=builder /productcatalogservice ./server
 COPY products.json .
 
+RUN chown -R nobody /src
+# user: nobody
+USER 65534
+
 # Definition of this variable is used by 'skaffold debug' to identify a golang binary.
 # Default behavior - a failure prints a stack trace for the current goroutine.
 # See https://golang.org/pkg/runtime/
