use non root user for loadgenerator and redis
use nobody and redis user instead of root.

--- a/kubernetes-manifests/loadgenerator.yaml
+++ b/kubernetes-manifests/loadgenerator.yaml
@@ -43,6 +43,10 @@ spec:
           fi
         name: frontend-check
         image: busybox:latest
+        securityContext:
+          # user: nobody
+          runAsUser: 65534
+          runAsGroup: 65534
         env:
         - name: FRONTEND_ADDR
           value: "frontend:80"
