--- a/kubernetes-manifests/redis.yaml
+++ b/kubernetes-manifests/redis.yaml
@@ -28,6 +28,10 @@ spec:
       containers:
       - name: redis
         image: redis:alpine
+        securityContext:
+          # user: redis, group: redis
+          runAsUser: 999
+          runAsGroup: 1000
         ports:
         - containerPort: 6379
         readinessProbe:
